--- a/android-client/res/layout/main.xml
+++ b/android-client/res/layout/main.xml
@@ -1,33 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="fill_parent"
-              android:layout_height="fill_parent"
-              android:padding="5dp">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="fill_parent"
+             android:layout_height="fill_parent" android:id="@+id/frameLayout"
+             android:layout_gravity="left|center_vertical">
     <LinearLayout
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content" android:id="@+id/linearLayout"
-            android:layout_gravity="left|center_vertical">
+            android:layout_height="wrap_content"
+            android:padding="10dp" android:baselineAligned="false" android:gravity="center"
+            android:layout_gravity="center">
         <EditText
-                android:layout_width="0dp"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/barcodeText" android:layout_gravity="center" android:layout_weight="2.13"
+                android:id="@+id/barcodeText" android:layout_weight="2.13"
                 android:inputType="number" android:lines="1"/>
-        <ImageButton
-                android:layout_width="72dp"
-                android:layout_height="fill_parent"
-                android:id="@+id/buttonscan" android:src="@drawable/add_barcode" android:contentDescription=""
-                />
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/linearLayout"
+                android:layout_gravity="center">
+            <ImageButton
+                    android:layout_width="150dp"
+                    android:layout_height="60dp"
+                    android:id="@+id/buttonSearch" android:src="@android:drawable/ic_menu_search"
+                    android:contentDescription="" android:layout_gravity="center"/>
+            <ImageButton
+                    android:layout_width="150dp"
+                    android:layout_height="60dp"
+                    android:id="@+id/buttonscan" android:src="@drawable/add_barcode" android:contentDescription=""
+                    android:layout_gravity="center"/>
+        </LinearLayout>
     </LinearLayout>
-    <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/priceText" android:inputType="number" android:lines="1" android:numeric="decimal"/>
-    <ImageButton
-            android:layout_width="160dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/buttonSearch" android:src="@android:drawable/ic_menu_search"
-            android:contentDescription="" android:layout_gravity="center"/>
-</LinearLayout>
+</FrameLayout>
 
