--- a/android-client/res/layout/main.xml
+++ b/android-client/res/layout/main.xml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="fill_parent"
-             android:layout_height="fill_parent" android:id="@+id/frameLayout"
-             android:layout_gravity="left|center_vertical">
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -30,6 +26,12 @@
                     android:id="@+id/buttonscan" android:src="@drawable/add_barcode" android:contentDescription=""
                     android:layout_gravity="center"/>
         </LinearLayout>
+        <com.google.android.maps.MapView
+                android:id="@+id/mapview"
+                android:layout_width="fill_parent"
+                android:layout_height="186dp"
+                android:clickable="true"
+                android:apiKey="0fNkg_i2Wi_c5zx2eftKRfJ-1Z8-OOVKXmNQGfw"
+                />
     </LinearLayout>
-</FrameLayout>
 
