--- a/android-client/res/layout/addprice.xml
+++ b/android-client/res/layout/addprice.xml
@@ -33,19 +33,39 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/datePicker" android:layout_gravity="center"/>
     </LinearLayout>-->
+    <GridLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent" android:id="@+id/gridLayout">
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:text="New Text"
+                android:id="@+id/textView" android:gravity="center_vertical" android:layout_row="0"
+                android:layout_column="0" android:layout_gravity="fill_horizontal|center_vertical"/>
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="New Button"
+                android:id="@+id/buttonChangeStore" android:layout_gravity="center_horizontal"
+                android:layout_row="0" android:layout_column="1"/>
+    </GridLayout>
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/linearLayout" android:layout_gravity="center">
+            android:layout_height="wrap_content"
+            android:id="@+id/linearLayout"
+            android:layout_gravity="center">
         <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Add"
-                android:id="@+id/addPriceDialogAddButton" android:layout_gravity="center"/>
+                android:text="@string/newPriceAddButton"
+                android:id="@+id/addPriceDialogAddButton"
+                android:layout_gravity="center"/>
         <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Cancel"
-                android:id="@+id/addPriceDialogCancelButton" android:layout_gravity="center"/>
+                android:text="@string/newPriceCancelButton"
+                android:id="@+id/addPriceDialogCancelButton"
+                android:layout_gravity="center"/>
     </LinearLayout>
 </LinearLayout>
