--- a/android-client/res/layout/store_add.xml
+++ b/android-client/res/layout/store_add.xml
@@ -4,13 +4,6 @@
               android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent">
-    <com.google.android.maps.MapView
-            android:id="@+id/mapview"
-            android:layout_width="fill_parent"
-            android:layout_height="130dp"
-            android:clickable="true"
-            android:apiKey="0fNkg_i2Wi_c5zx2eftKRfJ-1Z8-OOVKXmNQGfw"
-            />
     <GridLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" android:id="@+id/gridLayout" android:layout_gravity="center"
@@ -24,13 +17,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="New EditText"
-                android:id="@+id/editText" android:layout_row="0" android:layout_column="1"
+                android:id="@+id/storeNameEditText" android:layout_row="0" android:layout_column="1"
                 android:layout_gravity="fill_horizontal"/>
     </GridLayout>
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="New Button"
-            android:id="@+id/button" android:layout_gravity="center"/>
+            android:id="@+id/addStoreButton" android:layout_gravity="center"/>
+    <com.google.android.maps.MapView
+            android:id="@+id/mapview"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:clickable="true"
+            android:apiKey="0fNkg_i2Wi_c5zx2eftKRfJ-1Z8-OOVKXmNQGfw"
+            />
 
 </LinearLayout>
