--- a/android-client/res/layout/addprice.xml
+++ b/android-client/res/layout/addprice.xml
@@ -36,7 +36,7 @@
     <Button
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Select"
+            android:text="@string/addPriceSelectStore"
             android:id="@+id/buttonChangeStore"
             android:layout_row="0" android:layout_column="0"/>
     <LinearLayout
