--- a/android-client/res/layout-land/store_add.xml
+++ b/android-client/res/layout-land/store_add.xml
@@ -19,12 +19,13 @@
                 android:id="@+id/storeNameEditText" android:layout_row="0" android:layout_column="1"
                 android:layout_gravity="fill_horizontal" android:capitalize="sentences"
                 android:inputType="textCapSentences|textAutoCorrect" android:gravity="fill_horizontal"/>
+        <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/Add"
+                android:id="@+id/addStoreButton" android:layout_row="0"
+                android:layout_column="2"/>
     </GridLayout>
-    <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/Add"
-            android:id="@+id/addStoreButton" android:layout_gravity="center"/>
     <com.google.android.maps.MapView
             android:id="@+id/mapview"
             android:layout_width="fill_parent"
