--- a/android-client/res/layout/addprice.xml
+++ b/android-client/res/layout/addprice.xml
@@ -4,58 +4,29 @@
               android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content">
-
     <TextView
-            android:layout_width="fill_parent"
+            android:layout_width="53dp"
             android:layout_height="wrap_content"
-            android:text="New Text"
-            android:id="@+id/addPriceNameLabel"/>
+            android:text="@string/price"
+            android:id="@+id/addPriceNameLabel" android:layout_gravity="left|center_vertical" android:layout_row="0"
+            android:layout_column="0"/>
     <EditText
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/addPriceDialogPrice" android:numeric="decimal" android:inputType="numberDecimal"/>
-    <!--<LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent" android:id="@+id/linearLayout1" android:layout_gravity="center"
-            android:gravity="center">
-        <NumberPicker
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/datePicker" android:layout_gravity="center"/>
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=","
-                android:id="@+id/textView" android:layout_gravity="center"/>
-        <NumberPicker
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/datePicker" android:layout_gravity="center"/>
-    </LinearLayout>-->
+            android:layout_height="80dp"
+            android:id="@+id/addPriceDialogPrice" android:numeric="decimal" android:inputType="numberDecimal"
+            android:layout_row="1" android:layout_column="1"/>
     <Button
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/addPriceSelectStore"
             android:id="@+id/buttonChangeStore"
-            android:layout_row="0" android:layout_column="0"/>
-    <LinearLayout
-            android:orientation="horizontal"
+            android:onClick="changeStore"
+            android:layout_row="2" android:layout_column="0" android:layout_columnSpan="2"/>
+    <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/linearLayout"
-            android:layout_gravity="center">
-        <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/newPriceAddButton"
-                android:id="@+id/addPriceDialogAddButton"
-                android:layout_gravity="center"/>
-        <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/newPriceCancelButton"
-                android:id="@+id/addPriceDialogCancelButton"
-                android:layout_gravity="center"/>
-    </LinearLayout>
+            android:text="@string/newPriceAddButton"
+            android:id="@+id/addPriceDialogAddButton"
+            android:layout_gravity="center" android:layout_row="2" android:layout_column="0"
+            android:layout_marginTop="16dp"/>
 </LinearLayout>
