--- a/android-client/res/layout/prices.xml
+++ b/android-client/res/layout/prices.xml
@@ -5,8 +5,8 @@
               android:layout_width="fill_parent"
               android:layout_height="fill_parent">
 
-    <ListView
+    <ExpandableListView
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:id="@+id/listView"/>
+            android:id="@+id/expandableListView"/>
 </LinearLayout>
