--- a/android-client/res/layout/store_list_view.xml
+++ b/android-client/res/layout/store_list_view.xml
@@ -8,6 +8,7 @@
     <TextView
             android:layout_width="fill_parent"
             android:layout_height="33dp"
-            android:text="New Text"
-            android:id="@+id/nameTextView" android:gravity="center_vertical" android:singleLine="true"/>
+            android:id="@+id/nameTextView" android:gravity="center_vertical" android:singleLine="true"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:layout_margin="5dp"/>
 </LinearLayout>
