--- a/android-client/res/layout/store_select.xml
+++ b/android-client/res/layout/store_select.xml
@@ -7,12 +7,13 @@
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content" android:id="@+id/linearLayout">
+            android:layout_height="wrap_content" android:id="@+id/linearLayout" android:layout_marginBottom="22dp">
         <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="112dp"
                 android:layout_height="wrap_content"
-                android:text="New Text"
-                android:id="@+id/textView" android:layout_gravity="center"/>
+                android:text="@string/ttl"
+                android:id="@+id/textView" android:layout_gravity="center" android:layout_marginRight="-2dp"
+                android:gravity="right"/>
         <Spinner
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
