--- a/android-client/res/layout/addprice.xml
+++ b/android-client/res/layout/addprice.xml
@@ -12,9 +12,10 @@
             android:layout_column="0"/>
     <EditText
             android:layout_width="fill_parent"
-            android:layout_height="80dp"
+            android:layout_height="wrap_content"
             android:id="@+id/addPriceDialogPrice" android:numeric="decimal" android:inputType="numberDecimal"
-            android:layout_row="1" android:layout_column="1"/>
+            android:layout_row="1" android:layout_column="1" android:textSize="45dp" android:singleLine="true"
+            android:textStyle="bold" android:text="2345"/>
     <Button
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
