--- a/android-client/res/layout/addprice.xml
+++ b/android-client/res/layout/addprice.xml
@@ -8,26 +8,24 @@
             android:layout_width="53dp"
             android:layout_height="wrap_content"
             android:text="@string/price"
-            android:id="@+id/addPriceNameLabel" android:layout_gravity="left|center_vertical" android:layout_row="0"
-            android:layout_column="0"/>
+            android:id="@+id/addPriceNameLabel" android:layout_gravity="left|center_vertical"/>
     <EditText
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:id="@+id/addPriceDialogPrice" android:numeric="decimal" android:inputType="numberDecimal"
-            android:layout_row="1" android:layout_column="1" android:textSize="45dp" android:singleLine="true"
-            android:textStyle="bold" android:text="2345"/>
+            android:textSize="45dp" android:singleLine="true"
+            android:textStyle="bold" android:typeface="monospace"/>
     <Button
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/addPriceSelectStore"
             android:id="@+id/buttonChangeStore"
-            android:onClick="changeStore"
-            android:layout_row="2" android:layout_column="0" android:layout_columnSpan="2"/>
+            android:onClick="changeStore"/>
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/newPriceAddButton"
             android:id="@+id/addPriceDialogAddButton"
-            android:layout_gravity="center" android:layout_row="2" android:layout_column="0"
+            android:layout_gravity="center" android:onClick="addNewPrice"
             android:layout_marginTop="16dp"/>
 </LinearLayout>
