--- a/android-client/res/menu-v15/main_menu.xml
+++ b/android-client/res/menu-v15/main_menu.xml
@@ -2,8 +2,8 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/menu_add_store"
-          android:title="@string/menu_add"
-          android:icon="@android:drawable/ic_menu_add"
+          android:title="@string/addStore"
+          android:icon="@drawable/shopping_cart"
           android:orderInCategory="0"
           android:showAsAction="always" />
 </menu>
