first most stable version

--- a/android-client/res/layout/price_store_item.xml
+++ b/android-client/res/layout/price_store_item.xml
@@ -11,15 +11,14 @@
               android:layout_height="?android:attr/listPreferredItemHeight"
               android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
               android:textAppearance="?android:attr/textAppearanceLarge"
-              android:gravity="center_vertical" android:layout_marginRight="16dp" android:layout_gravity="center_vertical"
-              android:layout_weight="2" android:text="11" android:phoneNumber="true">
+              android:gravity="center_vertical" android:layout_marginRight="16dp" android:layout_gravity="right|top"
+              android:layout_weight="2">
 
     </TextView>
     <TextView
             android:layout_width="wrap_content"
-            android:layout_height="?android:attr/listPreferredItemHeight"
-            android:text="00"
-            android:id="@+id/minPrice" android:layout_gravity="center_vertical|left|right"
-            android:textAppearance="?android:attr/textAppearanceLarge" android:layout_marginRight="10dp"
-            android:gravity="center_vertical"/>
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:id="@+id/minPrice" android:layout_gravity="center_vertical|right"/>
 </LinearLayout>
