--- a/android-client/res/layout/price_list_item.xml
+++ b/android-client/res/layout/price_list_item.xml
@@ -13,16 +13,10 @@
             />
 
 
-    <LinearLayout
-            android:layout_below="@+id/priceTextView"
-            android:layout_alignLeft="@+id/priceTextView"
-            android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" android:id="@+id/linearLayout" android:gravity="right">
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/dateTextView" android:layout_gravity="center"
-                android:textAppearance="?android:attr/textAppearanceSmall"/>
-    </LinearLayout>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/dateTextView"
+            android:textAppearance="?android:attr/textAppearanceSmall" android:layout_gravity="right"
+            android:layout_marginRight="6dp"/>
 </LinearLayout>
