--- a/android-client/res/layout/prices.xml
+++ b/android-client/res/layout/prices.xml
@@ -4,7 +4,6 @@
               android:orientation="vertical"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent">
-
     <TableLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/tableLayout"
@@ -31,5 +30,6 @@
     <ExpandableListView
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:id="@+id/expandableListView"/>
+            android:id="@+id/expandableListView"
+            android:headerDividersEnabled="true"/>
 </LinearLayout>
