--- a/android-client/res/menu/main_menu.xml
+++ b/android-client/res/menu/main_menu.xml
@@ -3,7 +3,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/menu_add_store"
           android:title="@string/addStore"
-          android:icon="@drawable/shopping_cart"
+          android:icon="@drawable/collections_new_label"
           android:orderInCategory="0"
+          android:showAsAction="always" />
+    <item android:id="@+id/menu_history"
+          android:title="@string/history"
+          android:icon="@drawable/device_access_data_usage"
+          android:orderInCategory="1"
           android:showAsAction="always" />
 </menu>
