--- a/android-client/res/menu/prices.xml
+++ b/android-client/res/menu/prices.xml
@@ -28,7 +28,7 @@
 
     <item android:id="@+id/menu_details"
           android:title="@string/menu_details"
-          android:icon="@android:drawable/ic_menu_share"
+          android:icon="@drawable/content_paste"
           android:orderInCategory="1"
           android:showAsAction="never" />
 </menu>
