--- a/android-client/res/menu/stores.xml
+++ b/android-client/res/menu/stores.xml
@@ -3,7 +3,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/menu_add_store"
           android:title="@string/addStore"
-          android:icon="@drawable/shopping_cart"
+          android:icon="@drawable/collections_new_label"
           android:orderInCategory="0"
           android:showAsAction="always" />
 
