--- a/android-client/res/layout/store_list_view.xml
+++ b/android-client/res/layout/store_list_view.xml
@@ -1,14 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+              android:orientation="horizontal"
               android:layout_width="fill_parent"
-              android:layout_height="fill_parent">
+              android:layout_height="fill_parent"
+              android:gravity="center_vertical">
+
+    <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView"
+            android:minHeight="32dp"
+            android:minWidth="32dp"
+            android:layout_alignBottom="@+id/nameTextView"
+            />
 
     <TextView
             android:layout_width="fill_parent"
             android:layout_height="33dp"
             android:id="@+id/nameTextView" android:gravity="center_vertical" android:singleLine="true"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:layout_margin="5dp"/>
+            android:layout_margin="5dp"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="10dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="10dp"/>
+
 </LinearLayout>
